Updates to Lectures 1-2 notes

--- a/Lectures 1-2.ipynb
+++ b/Lectures 1-2.ipynb
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -864,8 +864,8 @@
    ],
    "source": [
     "#ord and chr provide the codes for values\n",
-    "print(ord(\"a\"))\n",
-    "print(chr(98))\n",
+    "print(ord(\"a\")) #ord() Takes a string representing one Unicode character, return an integer representing the Unicode code point of that character.\n",
+    "print(chr(98)) #chr() Takes an integer representing a Unicode code point and return a string representing the character with the corresponding Unicode code point.\n",
     "print(chr(20320))"
    ]
   },
