--- a/Lectures 1-2.ipynb
+++ b/Lectures 1-2.ipynb
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1186,12 +1186,674 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello12'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Format strings <template-string>.format(<values>)\n",
+    "#Calls method called format on string object, looks for variables to replace with arguments of format, based on order\n",
+    "\"Hello{0}{1}\".format(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Amount: 23'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Amount: {0}\" .format(23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Amount: 5000004'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Amount: {0}\" .format(5000004)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount:    5000004\n",
+      "Amount:          5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#To align, define a default width, numeric values are right-aligned, strings left-aligned\n",
+    "#If your value exceeds the width, it ignores the defined the width.\n",
+    "print(\"Amount: {0:10}\".format(5000004))\n",
+    "print(\"Amount: {0:10}\".format(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Amount: 5         '"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Left align\n",
+    "\"Amount: {0:<10}\".format(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Amount:     5     '"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Center align\n",
+    "\"Amount: {0:^10}\".format(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Amount: $100'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "amount = 100\n",
+    "\"Amount: ${0}\".format(amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['In',\n",
+       " 'Out',\n",
+       " '_',\n",
+       " '_10',\n",
+       " '_11',\n",
+       " '_12',\n",
+       " '_13',\n",
+       " '_14',\n",
+       " '_2',\n",
+       " '_4',\n",
+       " '_5',\n",
+       " '_6',\n",
+       " '_7',\n",
+       " '__',\n",
+       " '___',\n",
+       " '__builtin__',\n",
+       " '__builtins__',\n",
+       " '__doc__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '_dh',\n",
+       " '_i',\n",
+       " '_i1',\n",
+       " '_i10',\n",
+       " '_i11',\n",
+       " '_i12',\n",
+       " '_i13',\n",
+       " '_i14',\n",
+       " '_i15',\n",
+       " '_i2',\n",
+       " '_i3',\n",
+       " '_i4',\n",
+       " '_i5',\n",
+       " '_i6',\n",
+       " '_i7',\n",
+       " '_i8',\n",
+       " '_i9',\n",
+       " '_ih',\n",
+       " '_ii',\n",
+       " '_iii',\n",
+       " '_oh',\n",
+       " '_sh',\n",
+       " 'amount',\n",
+       " 'exit',\n",
+       " 'get_ipython',\n",
+       " 'quit']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ArithmeticError',\n",
+       " 'AssertionError',\n",
+       " 'AttributeError',\n",
+       " 'BaseException',\n",
+       " 'BlockingIOError',\n",
+       " 'BrokenPipeError',\n",
+       " 'BufferError',\n",
+       " 'BytesWarning',\n",
+       " 'ChildProcessError',\n",
+       " 'ConnectionAbortedError',\n",
+       " 'ConnectionError',\n",
+       " 'ConnectionRefusedError',\n",
+       " 'ConnectionResetError',\n",
+       " 'DeprecationWarning',\n",
+       " 'EOFError',\n",
+       " 'Ellipsis',\n",
+       " 'EnvironmentError',\n",
+       " 'Exception',\n",
+       " 'False',\n",
+       " 'FileExistsError',\n",
+       " 'FileNotFoundError',\n",
+       " 'FloatingPointError',\n",
+       " 'FutureWarning',\n",
+       " 'GeneratorExit',\n",
+       " 'IOError',\n",
+       " 'ImportError',\n",
+       " 'ImportWarning',\n",
+       " 'IndentationError',\n",
+       " 'IndexError',\n",
+       " 'InterruptedError',\n",
+       " 'IsADirectoryError',\n",
+       " 'KeyError',\n",
+       " 'KeyboardInterrupt',\n",
+       " 'LookupError',\n",
+       " 'MemoryError',\n",
+       " 'NameError',\n",
+       " 'None',\n",
+       " 'NotADirectoryError',\n",
+       " 'NotImplemented',\n",
+       " 'NotImplementedError',\n",
+       " 'OSError',\n",
+       " 'OverflowError',\n",
+       " 'PendingDeprecationWarning',\n",
+       " 'PermissionError',\n",
+       " 'ProcessLookupError',\n",
+       " 'RecursionError',\n",
+       " 'ReferenceError',\n",
+       " 'ResourceWarning',\n",
+       " 'RuntimeError',\n",
+       " 'RuntimeWarning',\n",
+       " 'StopAsyncIteration',\n",
+       " 'StopIteration',\n",
+       " 'SyntaxError',\n",
+       " 'SyntaxWarning',\n",
+       " 'SystemError',\n",
+       " 'SystemExit',\n",
+       " 'TabError',\n",
+       " 'TimeoutError',\n",
+       " 'True',\n",
+       " 'TypeError',\n",
+       " 'UnboundLocalError',\n",
+       " 'UnicodeDecodeError',\n",
+       " 'UnicodeEncodeError',\n",
+       " 'UnicodeError',\n",
+       " 'UnicodeTranslateError',\n",
+       " 'UnicodeWarning',\n",
+       " 'UserWarning',\n",
+       " 'ValueError',\n",
+       " 'Warning',\n",
+       " 'ZeroDivisionError',\n",
+       " '__IPYTHON__',\n",
+       " '__IPYTHON__active',\n",
+       " '__build_class__',\n",
+       " '__debug__',\n",
+       " '__doc__',\n",
+       " '__import__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'abs',\n",
+       " 'all',\n",
+       " 'any',\n",
+       " 'ascii',\n",
+       " 'bin',\n",
+       " 'bool',\n",
+       " 'bytearray',\n",
+       " 'bytes',\n",
+       " 'callable',\n",
+       " 'chr',\n",
+       " 'classmethod',\n",
+       " 'compile',\n",
+       " 'complex',\n",
+       " 'copyright',\n",
+       " 'credits',\n",
+       " 'delattr',\n",
+       " 'dict',\n",
+       " 'dir',\n",
+       " 'divmod',\n",
+       " 'dreload',\n",
+       " 'enumerate',\n",
+       " 'eval',\n",
+       " 'exec',\n",
+       " 'filter',\n",
+       " 'float',\n",
+       " 'format',\n",
+       " 'frozenset',\n",
+       " 'get_ipython',\n",
+       " 'getattr',\n",
+       " 'globals',\n",
+       " 'hasattr',\n",
+       " 'hash',\n",
+       " 'help',\n",
+       " 'hex',\n",
+       " 'id',\n",
+       " 'input',\n",
+       " 'int',\n",
+       " 'isinstance',\n",
+       " 'issubclass',\n",
+       " 'iter',\n",
+       " 'len',\n",
+       " 'license',\n",
+       " 'list',\n",
+       " 'locals',\n",
+       " 'map',\n",
+       " 'max',\n",
+       " 'memoryview',\n",
+       " 'min',\n",
+       " 'next',\n",
+       " 'object',\n",
+       " 'oct',\n",
+       " 'open',\n",
+       " 'ord',\n",
+       " 'pow',\n",
+       " 'print',\n",
+       " 'property',\n",
+       " 'range',\n",
+       " 'repr',\n",
+       " 'reversed',\n",
+       " 'round',\n",
+       " 'set',\n",
+       " 'setattr',\n",
+       " 'slice',\n",
+       " 'sorted',\n",
+       " 'staticmethod',\n",
+       " 'str',\n",
+       " 'sum',\n",
+       " 'super',\n",
+       " 'tuple',\n",
+       " 'type',\n",
+       " 'vars',\n",
+       " 'zip']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(__builtins__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pi = 3.14159265358'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Pi = {0}\".format(3.14159265358)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pi =      3.142'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#align to the right, specify the number of digits to print\n",
+    "\"Pi = {0:10.4}\".format(3.14159265358)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pi =       3.14'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#f indicates fixed point number, prints two digits after the decimal point\n",
+    "\"Pi = {0:10.2f}\".format(3.14159265358)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "**File Processing**\n",
+    "\n",
+    "To open a file: variable = open(filepath,mode)\n",
+    "\n",
+    "\\n line break, r read, w write, a append\n",
+    "\n",
+    "If you call open, with mode write, creates a new file, or overwrites an existing file. If you call open, with mode append, you will add content to an existing file.\n",
+    "\n",
+    "file.read() returns the file's contents as a single string.\n",
+    "\n",
+    "file.readline() returns the file's contents up to and including the \\n character.\n",
+    "\n",
+    "file.readlines() returns a list of the remaining lines in the file, with each list item including a single line with \\n at the end.\n",
+    "\n",
+    "To write to a file: open a file with \"w\" mode\n",
+    "\n",
+    "file.write()\n",
+    "\n",
+    "file.writelines()\n",
+    "\n",
+    "print(something,file=outputFile)\n",
+    "\n",
+    "To close a file: file.close() (The modification may not be written to the disk unless the file object is closed.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "myfile = open('/Users/anna/Desktop/testfile','w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.write(\"This is a test line 1\")\n",
+    "#prints the number of bytes written"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "myfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "myfile = open('/Users/anna/Desktop/testfile','a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.write(\"This is a test line 2 \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "myfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "myfile = open('/Users/anna/Desktop/testfile','r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a test line 1This is a test line 1This is a test line 2 \\n'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Once the file is read, it cannot be read again.\n",
+    "myfile.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Use loop to read lines outside of list: for lt in myfile.readlines(): print(lt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
